# SecuritiesResearchTool

./: .env.example  .gitignore  MVP_PRD.md  PROJECT_STATUS.md  README.md  Scope.md  TESTING_STATUS.md  Technical_Design copy.md  Technical_Design.md  debug_rsi.py  docker-compose.yml  error_log.txt  lint_autofix.sh  pyproject.toml  run.sh  start_db.sh  test_output.txt  test_output_debug.txt
Standards/: Engineering Standards.md
backend/: main.py
backend/backtesting/: __init__.py  engine.py  performance.py  positions.py  risk_manager.py  utils.py
backend/core/: config.py  constants.py  database.py
backend/data_providers/: base.py  yahoo_client.py  zerodha_client.py
backend/indicators/: __init__.py  manager.py  momentum.py  moving_averages.py  price_action.py  relative_strength.py  utils.py  volume.py
backend/models/: db_models.py
backend/patterns/: __init__.py  base.py  cup_with_handle.py  double_bottom.py  high_tight_flag.py  orchestrator.py  stage_analysis.py  trend_template.py  utils.py  vcp.py
backend/scripts/: calculate_indicators.py  init_db.py  load_history.py  load_symbols.py  validate_data.py
docs/architecture/: 00-TDD-Overview.md  01-System-Architecture.md  02-Technology-Stack.md  03-Data-Model.md
docs/design/: 04-Component-Design.md  05-Algorithms-And-Logic.md  06-API-Integration-Design.md  07-Processing-Pipelines.md
docs/operations/: 12-Deployment.md  13-Monitoring-Observability.md  14-Documentation-Requirements.md  15-Version-Control.md
docs/planning/: 16-Development-Phases.md  17-Risks-And-Mitigations.md  18-Future-Enhancements.md
docs/quality/: 08-Code-Quality-Standards.md  09-Testing-Strategy.md  10-Security.md  11-CI-CD-Pipeline.md
docs/reference/: 19-Appendices.md  20-Glossary-And-Revision-History.md
tests/: conftest.py  test_config.py  test_data_providers.py  test_database.py  test_db_models.py  test_indicators.py  test_init_db.py  test_integration_indicators.py
tests/test_backtesting/: test_engine.py  test_performance.py  test_positions.py  test_risk_manager.py
tests/test_patterns/: test_cup_with_handle.py  test_double_bottom.py  test_high_tight_flag.py  test_orchestrator.py  test_stage_analysis.py  test_trend_template.py  test_vcp.py
