[tool.poetry]
name = "securities-research-tool"
version = "0.1.0"
description = "Securities Research Tool - Pattern Recognition & Backtesting Platform"
authors = ["Development Team"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11"
# Web Framework
fastapi = "^0.109"
uvicorn = "^0.27"
pydantic-settings = "^2.0"
# Database
psycopg2-binary = "^2.9"
sqlalchemy = "^2.0"
# Data Processing
pandas = "^2.1"
numpy = "^1.26"
pandas-ta = "^0.3"
# Data Providers
yfinance = "^0.2"
kiteconnect = "^4.3"
# Utilities
python-dotenv = "^1.0"
tenacity = "^8.2"
structlog = "^24.1"
httpx = "^0.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
mypy = "^1.8"
ruff = "^0.3"
black = "^24.0"
hypothesis = "^6.98"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ------------------------------------------------------------------
# Style & Formatting (Black)
# ------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ['py311']
include = '\\.pyi?$'

# ------------------------------------------------------------------
# Linting (Ruff)
# ------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I","N", "W", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "D203",   # One-blank-line-before-class
    "D213",   # Multi-line-summary-second-line
    "COM812", # Trailing comma missing
    "ISC001", # Implicit string concatenation
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

# ------------------------------------------------------------------
# Static Type Checking (Mypy)
# ------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
files = ["backend"]

# ------------------------------------------------------------------
# Testing (Pytest)
# ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]